--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
-spacy>=3.0.0
+spacy==3.7.2
 PyPDF2
 
-# Explicit spaCy model download (adjust version if needed)
+# Required model
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
