--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ spacy==3.7.2
 PyPDF2
 scikit-learn
 matplotlib
+spacy==3.7.2
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
 
 # Required model
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
